proxy/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: platform
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/first/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: site1
              - match:
                  prefix: "/second/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: site2
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: site1
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: first.site
        port_value: 80
  - name: site2
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: second.site
        port_value: 80
